[package]
name = "lighthousectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
btleplug = "= 0.10.0"
anyhow = "1"
uuid = "1"
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3", default-features = false }
env_logger = "0.11"